# perception_bringup

./: CMakeLists.txt  package.xml
config/: test_mock_camera_controller.yaml
launch/: test.launch.py  test_mock_camera.launch.py
rviz/: robot.rviz
urdf/: fake_robot.urdf.xacro  robot.materials.xacro  robot.ros2_control.xacro  robot.urdf.xacro  robot.xacro
