cmake_minimum_required(VERSION 3.8)
project(perception_bringup)

find_package(ament_cmake REQUIRED)

# 安装 launch 文件
install(
  DIRECTORY launch
  DESTINATION share/${PROJECT_NAME}
)

# 安装 config 文件
install(
  DIRECTORY config
  DESTINATION share/${PROJECT_NAME}
)

install(DIRECTORY urdf
  DESTINATION share/${PROJECT_NAME}/
)

ament_package()
