<?xml version="1.0"?>
<package format="3">
  <name>perception_bringup</name>
  <version>0.0.1</version>
  <description>
    Bringup package for perception system based on ros2_control.
    This package launches the ros2_control_node and loads hardware
    and controllers configuration.
  </description>

  <maintainer email="you@example.com">your_name</maintainer>
  <license>Apache-2.0</license>

  <!-- build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- runtime dependencies -->
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ros2_control</exec_depend>

  <!-- launch system -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- YAML parsing (implicitly used by ros2_control_node) -->
  <exec_depend>rclcpp</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
